<resources>
    <string name="app_name">JustGo</string>
    <string name="kakao_app_key">f6fe1ffe2074a94f62ee2c326beecb5f</string>
    <string name="facebook_app_key">278528002907835</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_my_name">My Name</string>
    <string name="main_about">About</string>
    <string name="main_my_trips">My Trips</string>
    <string name="main_secession">Secession</string>
    <string name="main_change_language">Change Language</string>
    <string name="main_set_location">Set location</string>
    <string name="main_lets_go">Let\'s go</string>
    <string name="selected_subjects">Selected subjects</string>
    <string name="done">Done</string>
</resources>
